package com.designpattern.structural.proxy;

/**
 * @Auther: ZhengHuaJing
 * @Date: 2020/10/14 08:11
 * @Description:
 */
public interface Image {
    void display();
}
